# Nicegui-JsonEditor_Jsoneditor-Extension

./: pyproject.toml  readme.md  requirements.txt
src/: main.py
src/nicejeje/: jsonschema_editor.js  jsonschema_editor.py
